# egui-shadcn

./: CHANGES.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-06-13-egui-shadcn.md
docs/superpowers/specs/: 2026-06-13-egui-shadcn-design.md
examples/: settings.rs
skills/egui-shadcn/: SKILL.md
skills/egui-shadcn/references/: component-map.md  gotchas.md  layout-map.md  token-map.md
skills/egui-shadcn/registry/: README.md
skills/egui-shadcn/registry/src/: color.rs  lib.rs  reference.rs
skills/egui-shadcn/registry/src/components/: button.rs  input.rs  label.rs  select.rs  separator.rs  shared.rs  switch.rs  tabs.rs
src/: color.rs  layout.rs  lib.rs  reference.rs  theme.rs
src/components/: badge.rs  button.rs  card.rs  checkbox.rs  input.rs  mod.rs  select.rs  shared.rs  tabs.rs
tests/: color.rs  components.rs  layout.rs  settings_snapshot.rs  theme.rs
